--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                             <!-- /.fact-one__icon -->
                             <div class="fact-one__item__count">
                                 <span class="count-box">
-                                    <span class="count-text" data-stop="8" data-speed="1500"></span>Yrs
+                                    <span class="count-text" data-stop="8" data-speed="1500"></span>
                                 </span>
                             </div><!-- /.fact-one__count -->
                             <h3 class="fact-one__item__title">Served Since</h3><!-- /.fact-one__title -->
