--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 			"smartSpeed": 700,
 			"nav": false,
 			"navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
-			"dots": true,
+			"dots": false,
 			"autoplay": false,
 			"responsive": {
 				"0": {
