--- a/cafe-cake.html
+++ b/cafe-cake.html
@@ -448,7 +448,7 @@
                                     Lorem ipsum is simply free text dolor sit but the majority have suffered amet, consectetur notted.
                                 </p>
                             </div> -->
-                            <a href="contact.html" class="villoz-btn">
+                            <a href="https://maps.app.goo.gl/Qumog4txJgCKZ8Qi7" target="_blank" class="villoz-btn">
                                 <i>Our Location</i>
                                 <span>Our Location</span>
                             </a>
