--- a/index.html
+++ b/index.html
@@ -646,9 +646,9 @@
                                         <li><span class="fa fa-check-circle"></span>Most luxury villas available</li>
                                         <li><span class="fa fa-check-circle"></span>Premier choice vacation rentals</li>
                                     </ul> -->
-                                    <a href="about.html" class="villoz-btn">
-                                        <i>Contact Us</i>
-                                        <span>Contact Us</span>
+                                    <a href="banquet.html" class="villoz-btn">
+                                        <i>Know More</i>
+                                        <span>Know More</span>
                                     </a>
                                 </div>
 
@@ -704,8 +704,8 @@
                                             <li><span class="fa fa-check-circle"></span>Premier choice for vacation rentals</li>
                                         </ul> -->
                                         <a href="about.html" class="villoz-btn">
-                                            <i>Contact Us</i>
-                                            <span>Contact Us</span>
+                                            <i>About Us</i>
+                                            <span>About Us</span>
                                         </a>
                                     </div>
                                 </div>
