--- a/kathiyawadi.html
+++ b/kathiyawadi.html
@@ -449,7 +449,7 @@
                                 </p>
                             </div> -->
                             <div class="rest-btn">
-                                <a href="contact.html" class="villoz-btn">
+                                <a href="https://maps.app.goo.gl/Qumog4txJgCKZ8Qi7" target="_blank" class="villoz-btn">
                                     <i>Our Location</i>
                                     <span>Our Location</span>
                                 </a>
