--- a/banquet.html
+++ b/banquet.html
@@ -295,14 +295,14 @@
                                 <li><span>Visa Requirements</span>Documents Requied</li>
                                 <li><span>Area (km2)</span>96.000 km2</li>
                             </ul> -->
-                            <a href="contact.html" class="villoz-btn">
+                            <a href="https://maps.app.goo.gl/Qumog4txJgCKZ8Qi7" target="_blank" class="villoz-btn">
                                 <i>Our Location</i>
                                 <span>Our Location</span>
                             </a>
                             
                             <a href="contact.html" class="villoz-btn">
-                                <i>Book Your Event </i>
-                                <span>Book Your Event </span>
+                                <i>Contact Us</i>
+                                <span>Contact Us</span>
                             </a> 
                         </div>
                     </div>
